# opencrunch

./: .gitignore  Cargo.toml  README.md
opencrunch-derive/: Cargo.toml
opencrunch-derive/src/: lib.rs
src/: calcs.rs  distrs.rs  main.rs
web/: index.html  opencrunch.js  opencrunch_bg.wasm
