[package]
name = "opencrunch"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
statrs = "0.16.0"
getrandom = {version = "0.2.8", features = ["js"]}
opencrunch-derive = {path="opencrunch-derive"}
meval = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.0"
wasm-bindgen-futures = "0.4.0"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"